[package]
name = "mqtt2midi"
version = "0.1.1"
edition = "2021"
authors = ["bpmb82"]
description = "Utility that translates MQTT messages to MIDI"
repository = "https://github.com/bpmb82/mqtt2midi"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
in_range = "0.1.0"
midir = { version = "0.9.1", features = ["winrt"] }
rumqttc = "0.24.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
toml = "0.8.12"